--- a/前言.md
+++ b/前言.md
@@ -1,4 +1,5 @@
-# ![](./assets/UnitedStack_Logo_horizontal_300dpi.png)
+# ![](./assets/UnitedStack_Logo_horizontal_300dpi.png =100x20)
+# <img src="./assets/UnitedStack_Logo_horizontal_300dpi.png" width="100px" />
 
 # 
 
