--- a/knowledge/whitepaper/白皮书.md
+++ b/knowledge/whitepaper/白皮书.md
@@ -2,5 +2,19 @@
 
 ---
 
+> AWS 白皮书提供了 AWS 技术类白皮书的完整列表，涵盖架构、安全性和成本等主题。这些白皮书是由 AWS 团队、独立的分析师或者 AWS 社区 \(客户或合作伙伴\) 撰写的。
+
+## 主题
+
+所有白皮书全部按照主题分门别类，每个大的主题中又按照不同的应用场景和客户需求分类。
+
+## 内容
+
+
+
+## 参考文档
+
+* [分析师报告](https://aws.amazon.com/cn/resources/analyst-reports/)
+
 
 
