--- a/knowledge/training/培训和认证.md
+++ b/knowledge/training/培训和认证.md
@@ -1,7 +1,5 @@
 # 培训和认证体系
 
-
-
 ## 优势
 
 * 提升您的职业  
@@ -22,9 +20,43 @@
 * 表明您是专业人士  
   AWS 认证通过业内认可的证书验证您的独特 AWS 云技能并提高您的信用度。
 
+## 认证类型
 
+针对不同的人员，有不同的考试认证：
 
+* 解决方案架构师：AWS Certified Solutions Architect
 
+* 开发工程师：AWS Certified Developer
+
+* 系统运维工程师：AWS Certified SysOps Administrator
+
+* 运维开发工程师：AWS Certified DevOps Engineer
+
+* 网络工程师：AWS Certified Advanced Networkin \(beta\)
+
+* 大数据工程师：AWS Certified Big Data \(beta\)
+
+同时，几乎每种认证都包含了 Associate 和 Professional 两种不同的级别，而且证书学习路线图也提供好了，保证从低到高的学习路径。
+
+## 考试准备步骤
+
+AWS Certified Solutions Architect – Associate 考试的建议准备路径如下：
+
+1. 参加 AWS 培训课程
+
+2. 查看考试指南和样题
+
+3. 完成自主进度动手实验和备考任务
+
+4. 学习 AWS 白皮书
+
+4. 查看 AWS 常见问题
+
+4. 参加备考研讨会
+
+4. 参加模拟考试
+
+4. 报名考试并获得认证
 
 
 
