--- a/knowledge/whitepaper/白皮书.md
+++ b/knowledge/whitepaper/白皮书.md
@@ -2,17 +2,36 @@
 
 > AWS 白皮书提供了 AWS 技术类白皮书的完整列表，涵盖架构、安全性和成本等主题。这些白皮书是由 AWS 团队、独立的分析师或者 AWS 社区 \(客户或合作伙伴\) 撰写的。
 
-## 主题
-
 所有白皮书全部按照主题分门别类，每个大的主题中又按照不同的应用场景和客户需求分类。
 
-## 内容
+AWS 白皮书按照主题和内容的不同分为了以下 7 大类：
 
+* AWS 简介
 
+* 云计算成本
+
+* 安全性与合规性
+
+* 框架和方法
+
+* 应用程序解决方案
+
+* 行业解决方案
+
+* 产品
+
+可见，它们的白皮书，我们常识中认识的白皮书不太一样：
+
+* AWS 白皮书可以理解为 AWS 技术白皮书，较传统的偏市场的白皮书而言，对技术人员更加友好，也更加专业。
+
+* 成体系，分类、分层。
+
+* 涵盖范围广，涉及领域多。
 
 ## 参考文档
 
 * 分析师报告：[https://aws.amazon.com/cn/resources/analyst-reports/](https://aws.amazon.com/cn/resources/analyst-reports/)
+* AWS 白皮书：[https://aws.amazon.com/cn/whitepapers/?nc1=f\\_cc](https://aws.amazon.com/cn/whitepapers/?nc1=f\_cc)
 
 
 
